# th-unknown-symbol-test

./: README.md  default.nix
hs-opencv-binding/: OpenCV.hs  default.nix  hs-opencv-binding.cabal
play/: default.nix  play.cabal  play.hs
