name:          play
version:       0.0.0
license:       BSD3
author:        Bas van Dijk <v.dijk.bas@gmail.com>
build-type:    Simple
cabal-version: >=1.10

executable play
  main-is: play.hs

  build-depends: base >=4.8 && <4.9
               , lens
               , hs-opencv-binding

  default-language: Haskell2010
